--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Click & Drink</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Click & Drink</title> 
    <script defer src="index.js"></script>
 </head>
 <body>
-    
+    <h1>Click & Drink</h1>
+    <div id="emoji"> <em>Emoji-Section</em> </div>
+    <div id="cocktail"> <em>Cocktail-section</em> </div>
+    <div id="description"> <em>Results-section</em> </div>
 </body>
 </html>
