MVP done, click and mouseover events

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Click & Drink</h1>
-    <div id="emoji"> <em>Emoji-Section</em> </div>
+    <div id="emoji"> <em>Emoji-Section</em> 
+        <!--Image tags added below-->
+        <img id="happy" src="emojis/Happy Emoji.png"/>
+        <img id="party" src="emojis/Party Face Emoji.png"/>
+        <img id="angry" src="emojis/Very Angry Emoji.png"/>
+        <img id="sad" src="emojis/Very Sad Emoji.png"/>
+        <img id="smirk" src="emojis/Smirk Face Emoji.png"/>
+        <!--end of changes-->
+    </div>
     <div id="cocktail"> <em>Cocktail-section</em> </div>
     <div id="description"> <em>Results-section</em> </div>
 </body>
