css adjusted and added feedEmoji div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Click & Drink</h1>
-    <div id="emoji"> <em>Emoji-Section</em> 
+    <h2><em>How are you feeling today?</em></h2>
+    <div id="emoji"> 
         <!--Image tags added below-->
         <img id="happy" src="emojis/Happy Emoji.png"/>
         <img id="party" src="emojis/Party Face Emoji.png"/>
@@ -16,7 +17,8 @@
         <img id="smirk" src="emojis/Smirk Face Emoji.png"/>
         <!--end of changes-->
     </div>
-    <div id="cocktail"> <em>Cocktail-section</em> </div>
-    <div id="description"> <em>Results-section</em> </div>
+    <div id="cocktail"> <em>Cocktail selections for you</em> </div>
+    <div id="description" class="align">Feed me the Drink!</div>
+    <div id="feed-emoji" class="align"></div> <!--added for emoji-->
 </body>
 </html>
