--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h2><em>How are you feeling today?</em></h2>
     <div id="emoji"> 
         <!--Image tags added below-->
-        <img class="thumbnail" id="happy" src="emojis/Happy Emoji.png"/>
-        <img class="thumbnail"id="party" src="emojis/Party Face Emoji.png"/>
-        <img class="thumbnail"id="angry" src="emojis/Very Angry Emoji.png"/>
-        <img class="thumbnail"id="sad" src="emojis/Very Sad Emoji.png"/>
-        <img class="thumbnail"id="smirk" src="emojis/Smirk Face Emoji.png"/>
+        <img id="happy" src="emojis/Happy Emoji.png"/>
+        <img id="party" src="emojis/Party Face Emoji.png"/>
+        <img id="angry" src="emojis/Very Angry Emoji.png"/>
+        <img id="sad" src="emojis/Very Sad Emoji.png"/>
+        <img id="smirk" src="emojis/Smirk Face Emoji.png"/>
         <!--end of changes-->
     </div>
     <div id="cocktail"> <em>Cocktail selections for you</em> </div>
