--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Click & Drink</title> 
-    <script defer src="index.js"></script>
 </head>
 <body>
     <h1>Click & Drink</h1>
@@ -11,14 +11,17 @@
     <div id="emoji"> 
         <!--Image tags added below-->
         <img id="happy" src="emojis/Happy Emoji.png"/>
-        <img id="party" src="emojis/Party Face Emoji.png"/>
-        <img id="angry" src="emojis/Very Angry Emoji.png"/>
         <img id="sad" src="emojis/Very Sad Emoji.png"/>
+        <img id="angry" src="emojis/Very Angry Emoji.png"/>
         <img id="smirk" src="emojis/Smirk Face Emoji.png"/>
+        <img id="party" src="emojis/Party Face Emoji.png"/>
         <!--end of changes-->
     </div>
-    <div id="cocktail"> <em>Cocktail selections for you</em> </div>
-    <div id="description" class="align">Feed me the Drink!</div>
-    <div id="feed-emoji" class="align"></div> <!--added for emoji-->
+    <div id="cocktail"></div>
+    <div id="container">
+        <div id="description" class="align"></div>
+        <div id="dragndrop" class="align"></div>
+        <div id="feed-emoji" class="align"></div> <!--added for emoji-->
+    </div>
 </body>
 </html>
