--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Click & Drink</title> 
 </head>
 <body>
-    <h1>Click & Drink</h1>
+    <h1>CLICK N' DRINK</h1>
     <h2><em>How are you feeling today?</em></h2>
     <div id="emoji"> 
         <!--Image tags added below-->
@@ -15,13 +15,12 @@
         <img id="angry" src="emojis/Very Angry Emoji.png"/>
         <img id="smirk" src="emojis/Smirk Face Emoji.png"/>
         <img id="party" src="emojis/Party Face Emoji.png"/>
-        <!--end of changes-->
     </div>
     <div id="cocktail"></div>
     <div id="container">
         <div id="description" class="align"></div>
         <div id="dragndrop" class="align"></div>
-        <div id="feed-emoji" class="align"></div> <!--added for emoji-->
+        <div id="feed-emoji" class="align"></div> 
     </div>
 </body>
 </html>
